文字の修正
Updated HTML content for better readability and structure.

--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Videofac - URLを入れるだけ。あなたの記事が動画になる。">
+    <meta name="description" content="Videofac - URLを入れるだけ。<br>あなたの記事が動画になる。">
     <title>Videofac | AI動画生成サービス</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Noto+Sans+JP:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Noto+Sans+JP:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <!-- Header -->
     <header class="header">
@@ -50,7 +54,8 @@
             </div>
         </div>
         <div class="hero-visual">
-            <img src="https://images.unsplash.com/photo-1536240478700-b869070f9279?w=1200&h=800&fit=crop" alt="Video Production">
+            <img src="https://images.unsplash.com/photo-1536240478700-b869070f9279?w=1200&h=800&fit=crop"
+                alt="Video Production">
         </div>
     </section>
 
@@ -89,7 +94,8 @@
                     <p>完全自動化でも、完全手作業でもない。AIで効率化できる部分は自動化し、品質を左右する部分はプロの手で仕上げる。それがVideofacのハイブリッドモデルです。</p>
                 </div>
                 <div class="feature-image">
-                    <img src="https://images.unsplash.com/photo-1551434678-e076c223a692?w=800&h=600&fit=crop" alt="Team working">
+                    <img src="https://images.unsplash.com/photo-1551434678-e076c223a692?w=800&h=600&fit=crop"
+                        alt="Team working">
                 </div>
             </div>
             <div class="feature-block reverse">
@@ -99,7 +105,8 @@
                     <p>AIによる下地生成により、従来3時間かかっていた編集作業を1時間に短縮。クリエイターは「作業」ではなく「仕上げ」に集中できます。</p>
                 </div>
                 <div class="feature-image">
-                    <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?w=800&h=600&fit=crop" alt="Analytics">
+                    <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?w=800&h=600&fit=crop"
+                        alt="Analytics">
                 </div>
             </div>
             <div class="feature-block">
@@ -109,7 +116,8 @@
                     <p>BGMの選定、ロゴの挿入、アニメーションの追加。細部までこだわり、ブランドにふさわしい動画をお届けします。</p>
                 </div>
                 <div class="feature-image">
-                    <img src="https://images.unsplash.com/photo-1574717024653-61fd2cf4d44d?w=800&h=600&fit=crop" alt="Quality">
+                    <img src="https://images.unsplash.com/photo-1574717024653-61fd2cf4d44d?w=800&h=600&fit=crop"
+                        alt="Quality">
                 </div>
             </div>
         </div>
@@ -120,7 +128,7 @@
         <div class="container">
             <div class="section-label">Pricing</div>
             <h2 class="section-title">シンプルな料金体系。</h2>
-            <p class="section-desc">必要なものだけを、適正な価格で。</p>
+            <p class="section-desc">必要なものだけを、適正な価格で。<br>自動化システムの構築により、月100本以上の動画受注にも対応可能です。</p>
             <div class="pricing-grid">
                 <div class="pricing-card">
                     <div class="pricing-header">
@@ -128,26 +136,30 @@
                         <p class="pricing-price"><span>¥3,000</span>/本</p>
                     </div>
                     <ul class="pricing-features">
-                        <li>1分ショート動画</li>
+                        <li>ショート動画(1分未満)</li>
                         <li>AI画像生成</li>
-                        <li>基本編集</li>
+                        <li>AIナレーション生成</li>
+                        <li>字幕挿入</li>
+                        <li>編集代行</li>
                         <li>修正3回まで</li>
-                        <li>即日〜5営業日納品</li>
+                        <li> </li>
+                        <li> </li>
                     </ul>
                     <a href="#contact" class="btn btn-outline">お問い合わせ</a>
                 </div>
                 <div class="pricing-card featured">
-                    <div class="pricing-badge">Popular</div>
+                    <div class="pricing-badge">Recommend</div>
                     <div class="pricing-header">
                         <h3>Premium</h3>
                         <p class="pricing-price"><span>¥5,000</span>/本</p>
                     </div>
                     <ul class="pricing-features">
-                        <li>1分ショート動画</li>
-                        <li>動画素材使用</li>
-                        <li>アニメーション追加</li>
-                        <li>ロゴ・バナー挿入</li>
-                        <li>修正3回まで</li>
+                        <li>ショート動画(1分以上)</li>
+                        <li>AI画像生成</li>
+                        <li>AIナレーション生成</li>
+                        <li>字幕挿入</li>
+                        <li>編集代行（高品質編集）</li>
+                        <li>修正5回まで</li>
                         <li>優先納品</li>
                     </ul>
                     <a href="#contact" class="btn btn-primary">お問い合わせ</a>
@@ -163,11 +175,12 @@
                 <div class="about-content">
                     <div class="section-label">About</div>
                     <h2 class="section-title">動画制作の<br>「当たり前」を変える。</h2>
-                    <p>素晴らしい文字コンテンツは日々生まれている。ブログ、ニュース、記事、レポート——しかし、動画にしようとすると途端にハードルが上がる。</p>
+                    <p>素晴らしい文字コンテンツは日々生まれている。<br>ブログ、ニュース、記事、レポート。<br>しかし、動画にしようとすると途端にハードルが上がる。</p>
                     <p>Videofacは、AIで自動化できる部分は自動化し、人は「仕上げ」に集中することで、品質を保ちながらスケールできる動画制作の仕組みを提供します。</p>
                 </div>
                 <div class="about-image">
-                    <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?w=800&h=1000&fit=crop" alt="Team">
+                    <img src="https://images.unsplash.com/photo-1522071820081-009f0129c71c?w=800&h=1000&fit=crop"
+                        alt="Team">
                 </div>
             </div>
         </div>
@@ -241,4 +254,5 @@
 
     <script src="js/main.js"></script>
 </body>
+
 </html>
